fix zoom with arrow container overlap

--- a/client/src/components/Overview/overview.css
+++ b/client/src/components/Overview/overview.css
@@ -24,11 +24,11 @@
   height: 100%;
   max-height: 670px;
   display: grid;
-  grid-template-columns: 2fr 17fr 1fr;
+  grid-template-columns: 2fr minmax(40px, 1fr) 17fr 1fr;
   grid-template-rows: auto;
 }
 
-.overview-main-image-container, .overview-thumbnail-container, .overview-main-arrow-container {
+.overview-main-image-container, .overview-thumbnail-container {
   grid-row: 1 / 2;
 }
 
@@ -70,13 +70,23 @@
 }
 
 .overview-main-arrow-container {
-  grid-column: 2 / -1;
+  /* grid-column: 2 / -1; */
   grid-row: 1 / 2;
   z-index: 3;
   align-self: center;
   vertical-align: middle;
   padding: 0px 15px;
   height: 30px;
+  width: 40px;
+}
+
+.overview-main-arrow-container.left {
+  grid-column: 2 / 3;
+  width: 40px
+}
+
+.overview-main-arrow-container.right {
+  grid-column: 4 / -1;
 }
 
 .overview-main-arrow {
